--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "gatsby": "^3.12.1",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^3.12.0",
     "gatsby-plugin-react-helmet": "^4.12.0",
@@ -25,9 +26,12 @@
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-source-instagram": "^0.9.0",
     "gatsby-transformer-sharp": "^3.12.0",
+    "grommet": "^2.17.5",
+    "grommet-icons": "^4.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
